--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,21 @@
 
 services:
+  redpanda:
+    image: redpandadata/redpanda:v25.2.1
+    container_name: redpanda
+    command:
+    - redpanda
+    - start
+    - --memory=1G
+    - --reserve-memory=0M
+    - --node-id=0
+    - --check=false
+    - --kafka-addr=PLAINTEXT://0.0.0.0:9092
+    - --advertise-kafka-addr=redpanda:9092
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+
   clickhouse:
     image: clickhouse/clickhouse-server:25.7
     container_name: clickhouse
