--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,20 @@ services:
       - /var/lib/clickhouse/
       - /var/log/clickhouse-server/
 
+  postgres-archive:
+    image: postgres
+    container_name: postgres-archive
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      PGDATA: ${PGDATA}
+    ports:
+      - "5431:5432"
+    volumes:
+      - ./postgres-archive-data:/var/lib/postgresql/data
+    restart: unless-stopped
+
   dummy-producer:
     build:
       context: ./producers
@@ -64,10 +78,14 @@ services:
     depends_on: 
       - dummy-producer
       - clickhouse
+      - postgres-archive
     environment:
       CLICKHOUSE_DB: ${CLICKHOUSE_DB}
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
 
   superset:
     image: apache/superset:3.1.0
