--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,28 @@ services:
     volumes:
       - /var/lib/clickhouse/
       - /var/log/clickhouse-server/
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8123"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  dbt:
+    build:
+      context: ./dbt
+      dockerfile: Dockerfile
+    container_name: dbt
+    restart: on-failure
+    environment:
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD}
+    working_dir: /app
+    command: >
+      sh -c "dbt run && dbt docs generate && dbt docs serve --host 0.0.0.0 --port 8081"
+    ports:
+      - "8081:8081"
+    depends_on:
+      - clickhouse
 
   postgres-archive:
     image: postgres
